feat: add enpoint to add an item to db
